p2/confs/deployment-app3.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
spec:
  selector:
    app: app3
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  selector:
    matchLabels:
      app: app3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - image: paulbouwer/hello-kubernetes:1.10.1
        name: app3
        resources:
          limits:
            memory: 256Mi
            cpu: "0.1"
          requests:
            memory: 256Mi
            cpu: "0.1"
        ports:
        - containerPort: 8080
